--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -5,6 +5,12 @@
     </div>
     <div class="channel-list">
       <div class="list-head">Channels</div>
+      <div class="channel" ng-repeat="channel in channelsCtrl.channels">
+        <a># {{ channel.name }}</a>
+      </div>
+      <div class="channel create">
+        <a ui-sref="channels.create">+ create channel</a>
+      </div>
     </div>
     <div class="my-info">
       <img class="user-pic" ng-src="{{ channelsCtrl.getGravatar(channelsCtrl.profie.$id) }}">
