fixed a typo preventing gravatar from being displayed

--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="my-info">
-      <img class="user-pic" ng-src="{{ channelsCtrl.getGravatar(channelsCtrl.profie.$id) }}">
+      <img class="user-pic" ng-src="{{ channelsCtrl.getGravatar(channelsCtrl.profile.$id) }}">
       <div class="user-info">
         <div class="user-name">
           {{ channelsCtrl.profile.displayName }}
